--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY#大标题
-SEOTitle: 柏荧的博客 | BY Blog
+title: XIAO2 #大标题
+SEOTitle: 柏荧的博客 | BY Blog #标签栏标题
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
