--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: XIAO2 #大标题
-SEOTitle: 柏荧的博客 | BY Blog #标签栏标题
+title: 木子丶小二 #大标题
+SEOTitle: 小二的博客 | Xiao2's Blog #标签栏标题
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
