--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 木子丶小二 #大标题
 SEOTitle: 小二的博客 | Xiao2's Blog #标签栏标题
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-desk.png
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
