--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg #主标题图片
 email: suhxhee@qq.com #邮箱地址
 description: "君子生非异也，善假于物也" #副标题
 keyword: "小二,木子,木子丶小二,学习,高中,数学,物理,化学,理科" #关键词
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+url: "http://suhxhee.github.io"          #博客地址
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
