--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "君子生非异也，善假于物也" #副标题
 keyword: "小二,木子,木子丶小二,学习,高中,数学,物理,化学,理科" #关键词
 url: "http://suhxhee.github.io"          #博客地址
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/suhxhee/suhxhee.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
