--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-# Site settings
+# 基础设置
 title: 木子丶小二 #主标题
 SEOTitle: 小二的博客 | Xiao2's Blog #标签栏标题
 header-img: img/post-bg-desk.jpg #主标题图片
 email: suhxhee@qq.com #邮箱地址
 description: "君子生非异也，善假于物也" #副标题
 keyword: "小二,木子,木子丶小二,学习,高中,数学,物理,化学,理科" #关键词
-url: "http://suhxhee.github.io"          #博客地址
+url: "https://suhxhee.github.io"          #博客地址
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/suhxhee/suhxhee.github.io.git" # you code repository
+github_repo: "https://github.com/suhxhee/suhxhee.github.io.git" #代码库地址
 
-# Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+# 侧边栏设置
+sidebar: true                           #是否启用侧边栏
+sidebar-about-description: "能摆烂就摆烂"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
