--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ email: suhxhee@qq.com #邮箱地址
 description: "随便写写" #副标题
 keyword: "小二,木子,木子丶小二,学习,高中,数学,物理,化学,理科" #关键词
 url: "https://suhxhee.github.io"          #博客地址
-baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/suhxhee/suhxhee.github.io.git" #代码库地址
+baseurl: ""      #for example, '/blog' if your blog hosted on 'host/blog'
+github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" #代码库地址
 
 # 侧边栏设置
 sidebar: true                           #是否启用侧边栏
 sidebar-about-description: "君子生非异也，善假于物也。" #侧边栏底部文字
-sidebar-avatar: /img/avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar.png      #侧边栏图片
 
 
 
