--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ sidebar-avatar: /img/avatar.png      #侧边栏图片
 
 
 
-# SNS settings
+# SNS设置
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+# weibo_username:     suhxhee
+zhihu_username:     suhxhee
+github_username:    suhxhee
+#facebook_username:  none
+#jianshu_username:   none
+#twitter_username:   none
 
 
 
